--- a/index.html
+++ b/index.html
@@ -42,6 +42,32 @@
         vertical-align: middle;
         border-bottom: 1px solid hsl(208,100%,90%);
       }
+      header {
+        position: absolute;
+        left: 16px;
+        top: 16px;
+        right: 40px;
+        pointer-events: none;
+      }
+      aside {
+        position: absolute;
+        right: 16px;
+        top: 0;
+        bottom: 0;
+        display: flex;
+        align-items: center;
+        pointer-events: none;
+      }
+      aside > * {
+        pointer-events: auto;
+      }
+      #doodle {
+        width: 100%;
+        height: 100%;
+        fill: none;
+        stroke-linecap: round;
+        cursor: crosshair;
+      }
       .original {
         stroke: hsla(220,100%,50%,.4);
       }
@@ -52,15 +78,15 @@
     <style id="display-style"></style>
   </head>
   <body>
-    <header style="position: absolute; left: 16px; top: 16px; right: 40px; pointer-events: none;">
+    <svg id="doodle"></svg>
+
+    <header>
       <h1 style="margin-bottom: .5em; font-size: 1.75rem;">simplify-svg-path demo</h1>
       <p>Drag to draw. Open the development tools and compare the original path to the simplified path.</p>
     </header>
 
-    <svg width="100%" height="100%" fill="none" stroke-linecap="round" style="cursor: crosshair;"></svg>
-
-    <aside style="position: absolute; right: 16px; top: 0; bottom: 0; display: flex; align-items: center; pointer-events: none;">
-      <table style="pointer-events: auto;">
+    <aside>
+      <table>
         <tr>
           <td>Tolerance</td>
           <td><input type="number" name="tolerance" value="2.5" min="0" step="0.5"></td>
@@ -100,7 +126,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@luncheon/simplify-svg-path@0.1.0"></script>
     <script>
       (function () {
-        const svg = document.getElementsByTagName('svg')[0]
+        const svg = document.getElementById('doodle')
         const inputTolerance = document.getElementsByName('tolerance')[0]
         const inputPrecision = document.getElementsByName('precision')[0]
         const inputStrokeWidth = document.getElementsByName('stroke-width')[0]
